--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@asymmetrik/ngx-leaflet": "^4.0.0",
+    "@ngrx/store": "^6.1.0",
+    "@types/leaflet": "^1.2.11",
     "core-js": "^2.5.4",
+    "leaflet": "^1.3.4",
+    "ngx-socket-io": "^1.1.1",
     "rxjs": "~6.2.0",
+    "rxjs-compat": "^6.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
