--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/leaflet": "^1.2.11",
     "core-js": "^2.5.4",
     "leaflet": "^1.3.4",
+    "ng-pick-datetime": "^6.0.16",
     "ngx-socket-io": "^1.1.1",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.2",
